// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse_int with non-integer arg radix throws error 1`] = `
Object {
  "status": "error",
}
`;

exports[`parse_int with non-integer arg radix throws error 2`] = `"Line 2: Error: parse_int expects two arguments a string s, and a positive integer i between 2 and 36, inclusive."`;

exports[`parse_int with non-string arg str throws error 1`] = `
Object {
  "status": "error",
}
`;

exports[`parse_int with non-string arg str throws error 2`] = `"Line 2: Error: parse_int expects two arguments a string s, and a positive integer i between 2 and 36, inclusive."`;

exports[`parse_int with radix outside [2, 36] throws error, radix=1 1`] = `
Object {
  "status": "error",
}
`;

exports[`parse_int with radix outside [2, 36] throws error, radix=1 2`] = `"Line 2: Error: parse_int expects two arguments a string s, and a positive integer i between 2 and 36, inclusive."`;

exports[`parse_int with radix outside [2, 36] throws error, radix=37 1`] = `
Object {
  "status": "error",
}
`;

exports[`parse_int with radix outside [2, 36] throws error, radix=37 2`] = `"Line 2: Error: parse_int expects two arguments a string s, and a positive integer i between 2 and 36, inclusive."`;

exports[`parse_int with string arg radix throws error 1`] = `
Object {
  "status": "error",
}
`;

exports[`parse_int with string arg radix throws error 2`] = `"Line 2: Error: parse_int expects two arguments a string s, and a positive integer i between 2 and 36, inclusive."`;

exports[`parse_int with valid args is ok, but invalid str for radix 1`] = `
Object {
  "status": "finished",
  "value": NaN,
}
`;

exports[`parse_int with valid args is ok, radix 2 1`] = `
Object {
  "status": "finished",
  "value": 6485,
}
`;

exports[`parse_int with valid args is ok, radix 36 1`] = `
Object {
  "status": "finished",
  "value": 39961,
}
`;
